--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <a class="nav-link" href="#contact">Contact</a>
                     </li>
                     <li class="nav-item">
-                        <a href="components.html" class="ml-4 nav-link btn btn-primary btn-sm rounded">Components</a>
+                        <!-- <a href="components.html" class="ml-4 nav-link btn btn-primary btn-sm rounded">Components</a> -->
                     </li>
                 </ul>
             </div>
@@ -369,9 +369,9 @@
                     <div class="card">
                         <div class="card-body">
                             <div class="media align-items-center mb-3">
-                                <img class="mr-3" src="assets/imgs/avatar.jpg" alt="">
+                                <img class="mr-3" src="assets/gambar/logo.png" alt="">
                                 <div class="media-body">
-                                    <h6 class="mt-1 mb-0">John Doe</h6>
+                                    <h6 class="mt-1 mb-0">Biak Developer</h6>
                                     <small class="text-muted mb-0">Business Analyst</small>     
                                 </div>
                             </div>
@@ -383,9 +383,9 @@
                     <div class="card">
                         <div class="card-body">
                             <div class="media align-items-center mb-3">
-                                <img class="mr-3" src="assets/imgs/avatar-1.jpg" alt="">
+                                <img class="mr-3" src="assets/gambar/logo.png" alt="">
                                 <div class="media-body">
-                                    <h6 class="mt-1 mb-0">Maria Garcia</h6>
+                                    <h6 class="mt-1 mb-0">Biak Developer</h6>
                                     <small class="text-muted mb-0">Insurance Agent</small>      
                                 </div>
                             </div>
@@ -397,9 +397,9 @@
                     <div class="card">
                         <div class="card-body">
                             <div class="media align-items-center mb-3">
-                                <img class="mr-3" src="assets/imgs/avatar-2.jpg" alt="">
+                                <img class="mr-3" src="assets/gambar/logo.png" alt="">
                                 <div class="media-body">
-                                    <h6 class="mt-1 mb-0">Mason Miller</h6>
+                                    <h6 class="mt-1 mb-0">Biak Developer</h6>
                                     <small class="text-muted mb-0">Residential Appraiser</small>        
                                 </div>
                             </div>
@@ -453,7 +453,7 @@
             </div>
             <!-- Page Footer -->
             <footer class="mt-5 py-4 border-top border-secondary">
-                <p class="mb-0 small">&copy; <script>document.write(new Date().getFullYear())</script>, LeadMark Created By <a href="https://www.devcrud.com" target="_blank">DevCrud.</a>  All rights reserved </p>     
+                <p class="mb-0 small">&copy; <script>document.write(new Date().getFullYear())</script>,Created By <a href="" target="_blank">BIAK DEVELOPER</a>  All rights reserved </p>     
             </footer>
             <!-- End of Page Footer -->  
         </div>
