--- a/index.html
+++ b/index.html
@@ -111,15 +111,15 @@
                     <h6 class="section-title mb-0">About Company</h6>
                     <h6 class="section-subtitle mb-4">Architecto provident deserunt</h6>
                     <p >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate molestiae temporibus et tenetur unde quasi, cum nemo quo, molestias architecto alias voluptatibus corrupti corporis earum. Necessitatibus maxime modi ipsam, quod!</p>
-                    <img src="assets/imgs/about.jpg" alt="" class="w-100 mt-3 shadow-sm">
+                    <img src="https://i9.ytimg.com/vi/cdntiramFNg/maxresdefault.jpg?v=61a61ebc&sqp=CPiZ2aIG&rs=AOn4CLDC3HClG8f5IysJurUqDOBi4rfdFA" alt="" class="w-100 mt-3 shadow-sm">
                 </div>
                 <div class="col-md-6 pl-md-5">
                     <div class="row">
                         <div class="col-6">
-                            <img src="assets/imgs/about-1.jpg" alt="" class="w-100 shadow-sm">
+                            <img src="https://i9.ytimg.com/vi/AyprbzqKlCs/maxresdefault.jpg?v=5fa6b24a&sqp=CPiZ2aIG&rs=AOn4CLAR1Qk6m6Bwmh1vsU7rbO8POpTPGg" alt="" class="w-100 shadow-sm">
                         </div>
                         <div class="col-6">
-                            <img src="assets/imgs/about-2.jpg" alt="" class="w-100 shadow-sm">
+                            <img src="https://i9.ytimg.com/vi/ukLJCsHTR6A/maxresdefault.jpg?v=61b09cbd&sqp=CPiZ2aIG&rs=AOn4CLBDKFcpSi8hTnnH4Bqu9-s1pIuVew" alt="" class="w-100 shadow-sm">
                         </div>
                         <div class="col-12 mt-4">
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo iusto quidem laborum atque, sapiente ipsa excepturi fuga cum sed in assumenda eos quasi harum culpa laboriosam nulla, incidunt quae. Voluptatum.</p>
@@ -137,7 +137,7 @@
     <!-- Portfolio Section -->
     <section id="portfolio" class="section portfolio-section">
         <div class="container">
-            <h6 class="section-title text-center">Our Portfolio</h6>
+            <h6 class="section-title text-center">Youtube Content</h6>
             <h6 class="section-subtitle mb-5 text-center">New stunning projects for our amazing clients</h6>
             <div class="filters">
                 <a href="#" data-filter=".new" class="active">
@@ -156,148 +156,112 @@
             <div class="portfolio-container"> 
                 <div class="col-md-6 col-lg-4 web new">
                     <div class="portfolio-item">
-                        <img src="assets/imgs/web-1.jpg" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">
-                        <div class="content-holder">
+                        <iframe class="embed-responsive-item embed-responsive embed-responsive-16by9" width="560" height="315" src="https://www.youtube.com/embed/ukLJCsHTR6A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                        <!-- <div class="content-holder">
                             <a class="img-popup" href="assets/imgs/web-1.jpg"></a>
                             <div class="text-holder">
                                 <h6 class="title">WEB</h6>
                                 <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
                             </div>
-                        </div>   
+                        </div>    -->
                     </div>             
                 </div>
                 <div class="col-md-6 col-lg-4 web new">
                     <div class="portfolio-item">
-                        <img src="assets/imgs/web-2.jpg" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">
-                        <div class="content-holder">
-                            <a class="img-popup" href="assets/imgs/web-2.jpg"></a>
+                        <iframe class="embed-responsive-item embed-responsive embed-responsive-16by9" width="560" height="315" src="https://www.youtube.com/embed/cdntiramFNg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                        <!-- <div class="content-holder">
+                            <a class="img-popup" href="https://user-images.githubusercontent.com/59316805/193287197-31346eb2-0870-4425-97e4-8576f687b521.png"></a>
                             <div class="text-holder">
                                 <h6 class="title">WEB</h6>
                                 <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
                             </div>
-                        </div> 
+                        </div>  -->
                     </div>                         
                 </div>
                 <div class="col-md-6 col-lg-4 advertising new">
                     <div class="portfolio-item">
-                        <img src="assets/imgs/advertising-2.jpg" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">                         
-                        <div class="content-holder">
+                        <iframe class="embed-responsive-item embed-responsive embed-responsive-16by9" width="560" height="315" src="https://www.youtube.com/embed/lUksTOe0tic" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>                         
+                        <!-- <div class="content-holder">
                             <a class="img-popup" href="assets/imgs/advertising-2.jpg"></a>
                             <div class="text-holder">
                                 <h6 class="title">ADVERSTISING</h6>
                                 <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
                             </div>
-                        </div>    
+                        </div>     -->
                     </div>              
                 </div> 
                 <div class="col-md-6 col-lg-4 web">
                     <div class="portfolio-item">
-                        <img src="assets/imgs/web-4.jpg" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">
-                        <div class="content-holder">
+                        <iframe  class="embed-responsive-item embed-responsive embed-responsive-16by9" width="560" height="315" src="https://www.youtube.com/embed/v0gb2HhOwog" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                        <!-- <div class="content-holder">
                             <a class="img-popup" href="assets/imgs/web-4.jpg"></a>
                             <div class="text-holder">
                                 <h6 class="title">WEB</h6>
                                 <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
                             </div>
-                        </div>
+                        </div> -->
                     </div>                                                     
                 </div>
 
                 <div class="col-md-6 col-lg-4 advertising"> 
                     <div class="portfolio-item">
-                        <img src="assets/imgs/advertising-1.jpg" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">                               
-                        <div class="content-holder">
+                        <iframe  class="embed-responsive-item embed-responsive embed-responsive-16by9"  width="560" height="315" src="https://www.youtube.com/embed/9TCf335mNtA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                        <!-- <div class="content-holder">
                             <a class="img-popup" href="assets/imgs/advertising-1.jpg"></a>
                             <div class="text-holder">
                                 <h6 class="title">ADVERSITING</h6>
                                 <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
                             </div>
-                        </div>
+                        </div> -->
                     </div>                                                       
                 </div> 
                 <div class="col-md-6 col-lg-4 web new">
                     <div class="portfolio-item">
-                        <img src="assets/imgs/web-3.jpg" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">  
-                       <div class="content-holder">
+                        <iframe  class="embed-responsive-item embed-responsive embed-responsive-16by9"  width="560" height="315" src="https://www.youtube.com/embed/0oDywEiqBY0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> 
+                       <!-- <div class="content-holder">
                             <a class="img-popup" href="assets/imgs/web-3.jpg"></a>
                             <div class="text-holder">
                                 <h6 class="title">WEB</h6>
                                 <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
                             </div>
-                        </div>
+                        </div> -->
                     </div>                                                     
                 </div>
                 <div class="col-md-6 col-lg-4 advertising new">
                     <div class="portfolio-item">
-                        <img src="assets/imgs/advertising-3.jpg" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">       
-                       <div class="content-holder">
+                        <iframe class="embed-responsive-item embed-responsive embed-responsive-16by9"  width="560" height="315" src="https://www.youtube.com/embed/rYeWqQVnTRs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>       
+                       <!-- <div class="content-holder">
                             <a class="img-popup" href="assets/imgs/advertising-3.jpg"></a>
                             <div class="text-holder">
                                 <h6 class="title">ADVERSITING</h6>
                                 <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
                             </div>
-                        </div>
+                        </div> -->
                     </div>                                                       
                 </div> 
-                <div class="col-md-6 col-lg-4 advertising new"> 
-                    <div class="portfolio-item">
-                        <img src="assets/imgs/advertising-4.jpg" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">            
-                        <div class="content-holder">
-                            <a class="img-popup" href="assets/imgs/advertising-4.jpg"></a>
-                            <div class="text-holder">
-                                <h6 class="title">ADVERTISING</h6>
-                                <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
-                            </div>
-                        </div>
-                    </div>
-                            
-                </div> 
+
                 <div class="col-md-6 col-lg-4 branding new">
                     <div class="portfolio-item">
-                        <img src="assets/imgs/branding-1.jpg" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">                        
-                        <div class="content-holder">
-                            <a class="img-popup" href="assets/imgs/branding-1.jpg"></a>
-                            <div class="text-holder">
-                                <h6 class="title">BRANDING</h6>
-                                <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
-                            </div>
-                        </div> 
-                    </div>
-                </div> 
-                <div class="col-md-6 col-lg-4 branding">
-                    <div class="portfolio-item">
-                        <img src="assets/imgs/branding-2.jpg" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">  
-                        <div class="content-holder">
-                            <a class="img-popup" href="assets/imgs/branding-2.jpg"></a>
-                            <div class="text-holder">
-                                <h6 class="title">BRANDING</h6>
-                                <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
-                            </div>
-                        </div>
-                    </div>                                                     
-                </div> 
-                <div class="col-md-6 col-lg-4 branding new">
-                    <div class="portfolio-item">
-                        <img src="assets/imgs/branding-3.jpg" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">   
-                        <div class="content-holder">
+                        <iframe class="embed-responsive-item embed-responsive embed-responsive-16by9" width="560" height="315" src="https://www.youtube.com/embed/9zthOgVxQaY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>  
+                        <!-- <div class="content-holder">
                             <a class="img-popup" href="assets/imgs/branding-3.jpg"></a>
                             <div class="text-holder">
                                 <h6 class="title">BRANDING</h6>
                                 <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
                             </div>
-                        </div>
+                        </div> -->
                     </div>                                                    
                 </div> 
                 <div class="col-md-6 col-lg-4 branding">
                     <div class="portfolio-item">
                         <img src="assets/imgs/branding-4.jpg" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">                      
-                        <div class="content-holder">
+                        <!-- <div class="content-holder">
                             <a class="img-popup" href="assets/imgs/branding-4.jpg"></a>
                             <div class="text-holder">
                                 <h6 class="title">BRANDING</h6>
                                 <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
                             </div>
-                        </div>
+                        </div> -->
                     </div>                                                      
                 </div> 
                 <div class="col-md-6 col-lg-4 branding">
@@ -305,10 +269,10 @@
                         <img src="assets/imgs/branding-5.jpg" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">          
                         <div class="content-holder">
                             <a class="img-popup" href="assets/imgs/branding-5.jpg"></a>
-                            <div class="text-holder">
+                            <!-- <div class="text-holder">
                                 <h6 class="title">BRANDING</h6>
                                 <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
-                            </div>
+                            </div> -->
                         </div>
                     </div>                                                   
                 </div>
