--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <!-- End Of Page Header -->
 
     <!-- Service Section -->
-    <section  id="service" class="section pt-0">
+    <!-- <section  id="service" class="section pt-0">
         <div class="container">
             <h6 class="section-title text-center">Our Service</h6>
             <h6 class="section-subtitle text-center mb-5 pb-3">Voluptates architecto provident deserunt.</h6>
@@ -100,7 +100,7 @@
                 </div>              
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- End OF Service Section -->
 
     <!-- About Section -->
@@ -108,9 +108,18 @@
         <div class="container">
             <div class="row justify-content-between">
                 <div class="col-md-6 pr-md-5 mb-4 mb-md-0">
-                    <h6 class="section-title mb-0">About Company</h6>
-                    <h6 class="section-subtitle mb-4">Architecto provident deserunt</h6>
-                    <p >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate molestiae temporibus et tenetur unde quasi, cum nemo quo, molestias architecto alias voluptatibus corrupti corporis earum. Necessitatibus maxime modi ipsam, quod!</p>
+                    <h6 class="section-title mb-0">Tentang Biak Developer</h6>
+                    <h6 class="section-subtitle mb-4">Keindahan Yang Sesunguhnya</h6>
+                    <p >
+                        Selamat datang di Konten Kreator Pariwisata! 
+                        Kami hadir untuk memberikan informasi terbaru dan inspirasi liburan
+                        yang akan membuat perjalanan Anda semakin berkesan. <br>
+                        Tim kami terdiri dari para pencinta pariwisata 
+                        yang selalu siap membantu Anda merencanakan liburan yang tak terlupakan. 
+                        Melalui konten yang kami hadirkan, kami berharap dapat menginspirasi dan 
+                        memandu Anda mengeksplorasi keindahan alam dan budaya Indonesia. 
+                        Terima kasih sudah berkunjung!
+                    </p>
                     <img src="https://i9.ytimg.com/vi/cdntiramFNg/maxresdefault.jpg?v=61a61ebc&sqp=CPiZ2aIG&rs=AOn4CLDC3HClG8f5IysJurUqDOBi4rfdFA" alt="" class="w-100 mt-3 shadow-sm">
                 </div>
                 <div class="col-md-6 pl-md-5">
@@ -122,10 +131,18 @@
                             <img src="https://i9.ytimg.com/vi/ukLJCsHTR6A/maxresdefault.jpg?v=61b09cbd&sqp=CPiZ2aIG&rs=AOn4CLBDKFcpSi8hTnnH4Bqu9-s1pIuVew" alt="" class="w-100 shadow-sm">
                         </div>
                         <div class="col-12 mt-4">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo iusto quidem laborum atque, sapiente ipsa excepturi fuga cum sed in assumenda eos quasi harum culpa laboriosam nulla, incidunt quae. Voluptatum.</p>
-                            <p><b>Aliquid fuga sunt velit, temporibus molestias ab. Ipsa nesciunt totam, aliquid dignissimos.</b><br>
+                            <p>
+                                Biak Developer menyediakan konten keindahan alam pantai dan diving bawah laut memukau dengan kecantikan alaminya yang tiada tanding. 
+                                Kita dapat menyaksikan keanekaragaman hayati laut yang indah, 
+                                mulai dari ikan berwarna-warni hingga terumbu karang yang menakjubkan. 
+                                Suara ombak dan hembusan angin pantai menambah kesan romantis dan menyejukkan hati. 
+                                Rasakan sensasi menyelam dan menjelajahi keindahan bawah laut yang menakjubkan. 
+                                Semua pengalaman ini bisa Anda temukan di konten keindahan pantai dan diving.
                             </p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt ut a dolorem, consectetur, eos suscipit consequatur magnam est dolore obcaecati adipisci expedita, vero, iste ducimus qui numquam animi facilis officia?</p>
+                            <p>
+                                <b>Nikmati pengalaman perjalanan virtual melalui video konten pariwisata kami yang memukau.</b><br>
+                            </p>
+                            <p>Beragam informasi terkini dan tips perjalanan tersedia <br> Cukup kunjungi channel YouTube pariwisata kami dan temukan semua yang kamu butuhkan.</p>
                         </div>
                     </div>
                 </div>
