--- a/index.html
+++ b/index.html
@@ -155,19 +155,19 @@
     <section id="portfolio" class="section portfolio-section">
         <div class="container">
             <h6 class="section-title text-center">Youtube Content</h6>
-            <h6 class="section-subtitle mb-5 text-center">New stunning projects for our amazing clients</h6>
+            <a href="https://www.youtube.com/@BiakDeveloper"><h6 class="section-subtitle mb-5 text-center">Kunjungi Youtube  Kami</h6></a>
             <div class="filters">
                 <a href="#" data-filter=".new" class="active">
                     New
                 </a>
                 <a href="#" data-filter=".advertising">
-                    Advertising
+                    Alam
                 </a>
                 <a href="#" data-filter=".branding">
-                    Branding
+                    Pantai
                 </a>
-                <a href="#" data-filter=".web">
-                    Web
+                <a href="https://www.youtube.com/@BiakDeveloper" data-filter=".web">
+                    Diving
                 </a>
             </div>
             <div class="portfolio-container"> 
@@ -301,37 +301,39 @@
     <!-- Blog Section -->
     <section class="section" id="blog">
         <div class="container">
-            <h6 class="section-title mb-0 text-center">Latest Articles</h6>
-            <h6 class="section-subtitle mb-5 text-center">Architecto provident deserunt eveniet libero</h6>
+            <h6 class="section-title mb-0 text-center">Computer Graphic Images</h6>
+            <h6 class="section-subtitle mb-5 text-center">
+                Kami memiliki tim ahli yang terampil dalam menciptakan gambar-gambar dan animasi yang indah dan realistis
+            </h6>
 
             <div class="row">
                 <div class="col-md-4">
                     <div class="card border-0 mb-4">
-                        <img src="assets/imgs/blog-1.jpg" alt="" class="card-img-top w-100">
+                        <img src="assets/imgs/cg1.png">
                         <div class="card-body">                         
-                            <h6 class="card-title">Pariatur Omnis Harum quae sint.</h6>
-                            <p>Fuga quae ratione inventore Perferendis porro.</p>
-                            <a href="javascript:void(0)" class="small text-muted">Go To The Article</a>
+                            <h6 class="card-title">Secret Place Short Animation</h6>
+                            <p>Secret Place adalah sebuah video yang akan membawa Anda ke dalam sebuah tempat rahasia yang tersembunyi dari pandangan dunia luar. </p>
+                            <a href="https://www.youtube.com/watch?v=WwFQ8nrhKUY" class="section-subtitle mb-5 text-center">Play Animasi</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="card border-0 mb-4">
-                        <img src="assets/imgs/blog-2.jpg" alt="" class="card-img-top w-100">
+                        <img src="assets/imgs/cg2.png" alt="" class="card-img-top w-100">
                         <div class="card-body">                         
-                            <h6 class="card-title"> Harum Quae Porro</h5>
-                            <p>Fuga quae ratione inventore Perferendis porro.</p>
-                            <a href="javascript:void(0)" class="small text-muted">Go To The Article</a>
+                            <h6 class="card-title">Make a movie North</h6>
+                            <p>Ditampilkan dengan kualitas video yang tinggi dan musik yang mengiringi, video ini akan memberikan pengalaman visual yang luar biasa dan memukau.</p>
+                            <a href="https://www.youtube.com/watch?v=YBHNYp2DiWk" class="section-subtitle mb-5 text-center">Play Animasi</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="card border-0 mb-4">
-                        <img src="assets/imgs/blog-3.jpg" alt="" class="card-img-top w-100">
+                        <img src="assets/imgs/cg3.png" alt="" class="card-img-top w-100">
                         <div class="card-body">                         
-                            <h6 class="card-title">Qui optio neque alias</h6>
-                            <p>Fuga quae ratione inventore Perferendis porro.</p>
-                            <a href="javascript:void(0)" class="small text-muted">Go To The Article</a>
+                            <h6 class="card-title">The House Movie Scene</h6>
+                            <p>Dalam video ini, Anda akan melihat betapa misteriusnya vila tersebut dengan arsitektur klasik yang dipadukan dengan suasana yang gelap dan menakutkan. </p>
+                            <a href="https://www.youtube.com/watch?v=Yzuhg-MblU4" class="section-subtitle mb-5 text-center">Play Animasi</a>
                         </div>
                     </div>
                 </div>
