--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
         <div class="container">
             <h6 class="section-title mb-0 text-center">Computer Graphic Images</h6>
             <h6 class="section-subtitle mb-5 text-center">
-                Kami memiliki tim ahli yang terampil dalam menciptakan gambar-gambar dan animasi yang indah dan realistis
+                Kami juga memiliki tim ahli yang terampil dalam menciptakan gambar-gambar dan animasi yang indah dan realistis
             </h6>
 
             <div class="row">
@@ -345,20 +345,20 @@
     <!-- Testmonial Section -->
     <section class="section" id="testmonial">
         <div class="container">
-            <h6 class="section-title text-center mb-0">Testmonials</h6>
-            <h6 class="section-subtitle mb-5 text-center">What Our Clients Says</h6>
+            <h6 class="section-title text-center mb-0">Sosial Media</h6>
+            <h6 class="section-subtitle mb-5 text-center">Ikuti sosial media kami</h6>
             <div class="row">
                 <div class="col-md-4 my-3 my-md-0">
                     <div class="card">
                         <div class="card-body">
                             <div class="media align-items-center mb-3">
-                                <img class="mr-3" src="assets/gambar/logo.png" alt="">
+                                <img class="mr-3" src="assets/gambar/ig.jpg" alt="">
                                 <div class="media-body">
-                                    <h6 class="mt-1 mb-0">Biak Developer</h6>
-                                    <small class="text-muted mb-0">Business Analyst</small>     
+                                    <h6 class="mt-1 mb-0">Instagram</h6>
+                                    <a href="https://www.instagram.com/biakdeveloper/" class="section-subtitle mb-5 text-center">Follow</a>    
                                 </div>
                             </div>
-                            <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus enim modi, id dicta reiciendis itaque.</p>
+                            <!-- <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus enim modi, id dicta reiciendis itaque.</p> -->
                         </div>
                     </div>
                 </div>
@@ -366,13 +366,13 @@
                     <div class="card">
                         <div class="card-body">
                             <div class="media align-items-center mb-3">
-                                <img class="mr-3" src="assets/gambar/logo.png" alt="">
+                                <img class="mr-3" src="assets/gambar/fb.png" alt="">
                                 <div class="media-body">
-                                    <h6 class="mt-1 mb-0">Biak Developer</h6>
-                                    <small class="text-muted mb-0">Insurance Agent</small>      
+                                    <h6 class="mt-1 mb-0">Facebook</h6>
+                                    <a href="https://www.facebook.com/groups/114695744212842" class="section-subtitle mb-5 text-center">Follow</a>      
                                 </div>
                             </div>
-                            <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus enim modi, id dicta reiciendis itaque.</p>
+                            <!-- <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus enim modi, id dicta reiciendis itaque.</p> -->
                         </div>
                     </div>
                 </div>
@@ -380,13 +380,13 @@
                     <div class="card">
                         <div class="card-body">
                             <div class="media align-items-center mb-3">
-                                <img class="mr-3" src="assets/gambar/logo.png" alt="">
+                                <img class="mr-3" src="assets/gambar/art.png" alt="">
                                 <div class="media-body">
-                                    <h6 class="mt-1 mb-0">Biak Developer</h6>
-                                    <small class="text-muted mb-0">Residential Appraiser</small>        
+                                    <h6 class="mt-1 mb-0">Art Station</h6>
+                                    <a href="https://www.artstation.com/biakdev" class="section-subtitle mb-5 text-center">Follow</a>      
                                 </div>
                             </div>
-                            <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus enim modi, id dicta reiciendis itaque.</p>
+                            <!-- <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus enim modi, id dicta reiciendis itaque.</p> -->
                         </div>
                     </div>
                 </div>
@@ -412,7 +412,7 @@
                 </div>
                 <div class="col-md-7">
                     <form>
-                        <h4 class="mb-4">Drop Us A Line</h4>
+                        <h4 class="mb-4">Kirim Pertanyaan Anda</h4>
                         <div class="form-row">
                             <div class="form-group col-sm-4">
                                 <input type="text" class="form-control text-white rounded-0 bg-transparent" name="name" placeholder="Name">
