--- a/index.html
+++ b/index.html
@@ -404,10 +404,10 @@
                     <p class="mb-4">+ 123-456-7890</p>
 
                     <h6 class="mb-0">Address</h6>
-                    <p class="mb-4">12345 Fake ST NoWhere AB Country</p>
+                    <p class="mb-4">Biak Papua</p>
 
                     <h6 class="mb-0">Email</h6>
-                    <p class="mb-0">info@website.com</p>
+                    <p class="mb-0">BiakDeveloper@gmail.com</p>
                     <p></p>
                 </div>
                 <div class="col-md-7">
