--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="card border-0 mb-4">
-                        <img src="assets/imgs/cg1.png">
+                        <img src="https://user-images.githubusercontent.com/59316805/236633251-7f42b1e0-89fa-4204-b1c9-563f4d7cf93a.png">
                         <div class="card-body">                         
                             <h6 class="card-title">Secret Place Short Animation</h6>
                             <p>Secret Place adalah sebuah video yang akan membawa Anda ke dalam sebuah tempat rahasia yang tersembunyi dari pandangan dunia luar. </p>
@@ -319,20 +319,20 @@
                 </div>
                 <div class="col-md-4">
                     <div class="card border-0 mb-4">
-                        <img src="assets/imgs/cg2.png" alt="" class="card-img-top w-100">
+                        <img src="https://user-images.githubusercontent.com/59316805/236633274-7c7d4a5f-b492-42c5-bd43-2128e34ce642.png" alt="" class="card-img-top w-100">
                         <div class="card-body">                         
-                            <h6 class="card-title">Make a movie North</h6>
+                            <h6 class="card-title">Make a movie Realistic</h6>
                             <p>Ditampilkan dengan kualitas video yang tinggi dan musik yang mengiringi, video ini akan memberikan pengalaman visual yang luar biasa dan memukau.</p>
-                            <a href="https://www.youtube.com/watch?v=YBHNYp2DiWk" class="section-subtitle mb-5 text-center">Play Animasi</a>
+                            <a href="https://www.youtube.com/watch?v=5JqA1Jqin2Q" class="section-subtitle mb-5 text-center">Play Animasi</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="card border-0 mb-4">
-                        <img src="assets/imgs/cg3.png" alt="" class="card-img-top w-100">
+                        <img src="https://user-images.githubusercontent.com/59316805/236633302-7b2a4793-dc14-4380-963c-de0613fd3c92.png" alt="" class="card-img-top w-100">
                         <div class="card-body">                         
-                            <h6 class="card-title">The House Movie Scene</h6>
-                            <p>Dalam video ini, Anda akan melihat betapa misteriusnya vila tersebut dengan arsitektur klasik yang dipadukan dengan suasana yang gelap dan menakutkan. </p>
+                            <h6 class="card-title">Dragon Cave</h6>
+                            <p>Video berjudul Dragon Cave menghadirkan pemandangan indah dari goa yang dipenuhi stalaktit dan stalakmit yang menakjubkan. </p>
                             <a href="https://www.youtube.com/watch?v=Yzuhg-MblU4" class="section-subtitle mb-5 text-center">Play Animasi</a>
                         </div>
                     </div>
