--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <div class="row justify-content-between">
                 <div class="col-md-6 pr-md-5 mb-4 mb-md-0">
                     <h6 class="section-title mb-0">Tentang Biak Developer</h6>
-                    <h6 class="section-subtitle mb-4">Keindahan Yang Sesunguhnya</h6>
+                    <h6 class="section-subtitle mb-4">Temukan Yang Terbaik</h6>
                     <p >
                         Selamat datang di Konten Kreator Pariwisata! 
                         Kami hadir untuk memberikan informasi terbaru dan inspirasi liburan
